dashboard/static/app.css
#graphs {
	display: block;
}

#graphs svg {
	font-size: 10px;
}

#graphs ul {
	padding-top: 15px;
	margin-right: 10px;
}

.axis path,
.axis line {
	fill: none;
	stroke: #000;
	shape-rendering: crispEdges;
}

.axis .domain,
.axis .tick line {
	stroke: lightgrey;
	opacity: 0.5;
}

.tick text {
	fill: #545454;
	font-size: 12px;
}

path.line {
	stroke: steelblue;
	fill: none;
	stroke-width: 2;
}

path.line.highlight {
	stroke-width: 4;
}

/* Page global stuff */

.curtains-ct {
	height: 100%;
	width: 100%;
	position: fixed;
}

div.curtains-with-footer {
	height: calc(100% - 125px);
	width: calc(100% - 90px);
	position: fixed;
	padding-bottom: 30px;
	padding-left: 20px;
	padding-right: 20px;
	overflow-y: auto;
}

.curtains-header {
	margin-top: 10px;
	margin-bottom: 15px;
	font-size: 30px;
}

.curtains-logo {
	height: 80px;
}

.curtains-message {
	margin-left: 160px;
	margin-right: 170px;
	font-size: 13px;
}

.container-fluid {
	margin-top: 0px;
	padding-left: 0px;
}

.ovirt-sidebar {
	width: 100px;
}

.ovirt-sidebar ul {
	margin: 0;
	padding: 0;
	list-style: none;
	width: 90px;
	border-right: 1px solid #dadada;
	height: 100%;
	position: fixed;
	background-color: #fafafa;
	top: 0px;
}

.ovirt-sidebar ul li {
	border-bottom: 1px solid #dadada;
	display: block;
	font-size: 13px;
}

.ovirt-sidebar ul li a {
	border-bottom: 0;
	background-color: #fff;
	padding: 15px 10px;
	text-align: center;
	display: block;
	color: inherit;
	text-decoration: none;
	position: relative;
}

.ovirt-sidebar ul li a:hover {
	background-color: #f6f6f6;
}

.ovirt-sidebar ul li.active a:hover {
	background-color: #fff;
}

.ovirt-sidebar ul li a .fa {
	display: inline;
	font-size: 20px;
	color: #b3b3b3;
}

.ovirt-sidebar ul li.active a .fa {
	color: #0099d3;
}

.ovirt-sidebar ul li.active a:after {
	content: "";
	width: 4px;
	height: 100%;
	left: 0;
	top: 0;
	display: block;
	position: absolute;
	background-color: #0099d3;
}

#content {
	margin-left: 90px;
	margin-right: 0px;
	min-height: 100%;
}

#content > .row {
	margin-right: 0px;
}

.combobox_option {
	width: 100%;
}

/* HACK: https://github.com/patternfly/patternfly/issues/75 */
.blank-slate-pf .fa {
	color: #999999;
}

.blank-slate-pf .spinner-lg {
	height: 58px;
	width: 58px;
}

.ovirt-input {
	margin: 0 auto;
}

.he-input {
	text-align: left;
}

.btn-spacer {
	margin-top: 10px;
}

.viewport {
	white-space: nowrap;
	min-height: 200px;
	max-height: 200px;
	overflow: auto;
	padding-left: 15px;
}

.wizard-container-center {
	width: 100%;
}

.container-center {
	margin-left: -100px;
}

.ovirt-content-header-extra {
	background: #f5f5f5;
	border-bottom: 1px solid #ddd;
	padding: 10px 20px;
	width: 100%;
	position: fixed;
	z-index: 900;
	top: 0;
}

.ovirt-content-header-extra .btn-group:not(:first-child) {
	padding-left: 20px;
}

.pad-header {
	margin-top: 20px;
	margin-bottom: 20px;
}

.vcenter {
	min-height: 60px;
	display: flex;
	align-items: center;
}

.modal-body .entry {
	word-wrap: break-word;
	white-space: normal;
}

.health-icon {
	float: right;
	position: relative;
	right: 107px;
}

.accordion {
	display: table;
	width: 100%;
}

.accordion-row {
	display: table-row;
	line-height: 30px;
}

.accordion-header {
	display: table-cell;
	height: 30px;
	vertical-align: middle;
	text-align: left;
	color: black;
	font-size: 1.1em;
}

.accordion-icon {
	display: inline-block;
	margin-right: 50px;
}

.accordion-row:hover,
.accordion-row.open {
	background-color: #ededed;
}

.accordion-toggle {
	display: table-cell;
	width: 30px;
}

.accordion-toggle i {
	width: 30px;
	font-size: 24px;
	visibility: hidden;
	margin-left: 10px;
	margin-top: 5px;
}

.accordion-row.open i,
.accordion-row:hover .accordion-toggle i {
	color: #65bedf;
	background-color: #ededed;
	visibility: visible;
}

div.no-sidebar {
	margin-left: 5%;
}

.ansible-wizard-delete-icon {
	vertical-align: middle;
	padding-left: 5px;
}

.ansible-wizard-table {
	margin: auto;
}

.ansible-wizard-bricks-table,
#lv-cache-toggle {
	margin-left: 60px;
}

.ansible-wizard-table th {
	text-align: center;
}

.ansible-wizard-config-preview {
	width: 100%;
	height: 270px;
}

.ansible-wizard-host-ssh-info {
	margin-top: 30px;
}

.ansible-wizard-section-title {
	background: transparent;
}

.ansible-wizard-table tr,
.ansible-wizard-bricks-table tr {
	vertical-align: top;
}

.ansible-wizard-thinp-checkbox {
	height: 26px;
	width: 18px;
}

.ansible-wizard-bricks-delete {
	text-align: left !important;
}
.ansible-wizard-bricks-row td,
.ansible-wizard-bricks-row th {
	padding-left: 0px;
	padding-right: 0px;
	text-align: center;
	font-size: 10px;
}

.he-preview-field {
	text-align: right;
	font-weight: bold;
}

label.he-preview-value {
	width: 300px;
	text-align: left;
	padding-left: 0px;
	overflow-wrap: break-word;
}

.he-form-container {
	margin-left: 5%;
}

label.he-input-label {
	text-align: left !important;
	margin-left: 5px;
	padding-left: 0px;
}

.he-input-row {
	display: inline-block;
	width: 100%;
}

div.he-text-with-units {
	padding-right: 0px;
}

.he-stage-header {
	height: 40px;
	text-align: center;
	margin-bottom: -10px;
}

h3.he-first-preview-header {
	text-align: center;
	padding-right: 40px;
	padding-top: 0px;
	margin-top: 0px;
	padding-bottom: 5px;
	border-bottom: solid darkgray 1px;
}

h3.he-preview-header {
	text-align: center;
	padding-right: 40px;
	padding-top: 10px;
	padding-bottom: 5px;
	border-bottom: solid darkgray 1px;
}

.he-data-loading-container {
	padding-top: 150px;
}

.he-setup-messages {
	white-space: nowrap;
	min-height: 150px;
	max-height: 150px;
	overflow: auto;
	padding-left: 15px;
}

.multi-row-text-box-button {
	width: 20px;
	border: solid 1px black;
	text-align: center;
	display: inline-block;
}

.multi-row-text-box-add-button {
	margin-left: 5px;
}

div.multi-row-text-box-button-container {
	width: 70px;
	padding-left: 10px;
	padding-right: 0px;
}

div.multi-row-text-box-input {
	width: calc(100% - 70px);
}
/* ... */

